--- a/demo-openid/package.json
+++ b/demo-openid/package.json
@@ -22,15 +22,18 @@
     "inquirer": "^8.2.5"
   },
   "devDependencies": {
-    "@credo-ts/openid4vc": "*",
     "@credo-ts/askar": "*",
     "@credo-ts/core": "*",
     "@credo-ts/node": "*",
+    "@credo-ts/openid4vc": "*",
     "@types/express": "^4.17.13",
     "@types/figlet": "^1.5.4",
     "@types/inquirer": "^8.2.6",
+    "@types/jest": "^29.5.12",
     "clear": "^0.1.0",
     "figlet": "^1.5.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.4.0"
   }
 }
